[package]
name = "devcaders"
version = "0.6.0"
edition = "2021"
description = "Devcade input support library for Bevy+Rust!"
license = "MIT"
repository = "https://github.com/Mstrodl/devcaders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.0", default-features=false, features = ["multi-threaded"]}
enum-iterator = "1.4.0"
devcade_onboard_types = "0.1.0"
serde_json = "1.0.96"
serde = "1.0.164"
log = "0.4.18"
futures-lite = "1.11.3"
async-compat = "0.2.1"
tokio = { version = "1.33.0", features = ["sync", "net", "io-util", "rt"] }
